Fix: Overflow fixed

--- a/todolist/style.css
+++ b/todolist/style.css
@@ -1,5 +1,5 @@
 html,body{
-   width:   100%;
+   /* width:   100%; */
    margin: 0 ;
    background-image: linear-gradient(to right, #8360c3, #2ebf91);
    font-family: Arial, Helvetica, sans-serif;
@@ -11,7 +11,7 @@ body{
     
 }
 .container{
-    width: 100%;
+    /* width: 100%; */
     padding: 25px;
     box-shadow:  2px 5px 7px black;
     text-align: center;
